# friggen

./: CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  friggenfile  install.sh
.github/: release.yml
.github/workflows/: ci.yml  release.yml
src/: args.rs  ast.rs  cli.rs  error.rs  friggen.rs  friggenfile.pest  friggenfile.rs  fs_context.rs  ioutil.rs  logging.rs  main.rs  parser.rs  print.rs  shell.rs
